--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@reportportal/agent-js-jest",
+  "name": "@reportportal/agent-js-jest-detox",
   "version": "5.0.4",
-  "description": "A Jest reporter that uploads test results to ReportPortal",
+  "description": "A Detox Jest reporter that uploads test results to ReportPortal",
   "main": "index.js",
   "repository": {
     "type": "git",
@@ -14,6 +14,9 @@
     },
     {
       "name": "Ringo De Smet"
+    },
+    {
+      "name": "Nikita Popov"
     },
     {
       "name": "Ontoforce",
@@ -38,7 +41,10 @@
   "dependencies": {
     "@jest/reporters": "27.0.6",
     "@reportportal/client-javascript": "^5.0.6",
-    "jest-cli": "^27.0.6"
+    "jest-cli": "^27.0.6",
+    "glob": "^8.0.3",
+    "glob-escape": "^0.0.2",
+    "sanitize-filename": "^1.6.3"
   },
   "devDependencies": {
     "@types/jest": "^27.0.1",
