--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -56,4 +56,4 @@ jobs:
           npm config list
           npm publish
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.GH_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
